# libsr

./: .gitignore  AUTHORS  Doxyfile  Makefile  Makefile.am  README.md  TASKS.md  configure.ac  index.md  packages.ubuntu
_layout/: index.html
_layouts/: index.html
bindings/: Makefile.am  libsrmodule.c  setup.py
docs/: Makefile.am  bezier.tex  bibliography.bib  build.rb  helix.tex  spiral.tex
go/: Makefile.am  Readme.md  issues.md  paleo.go
src/: Makefile.am  main.c
src/common/: Makefile.am  debug.h  geom.c  geom.h  module.txt  point.c  point.h  stroke.c  stroke.h  util.h
src/dollarp/: Makefile.am  dollarp.c  dollarp.h
src/paleo/: Makefile  Makefile.am  arc.c  arc.h  arc_test.c  arc_test.h  circle.c  circle.h  composite.c  composite.h  curve.c  curve.h  curve_test.c  curve_test.h  ellipse.c  ellipse.h  ellipse_test.c  ellipse_test.h  helix.c  helix.h  helix_test.c  helix_test.h  line.c  line.h  line_test.c  line_test.h  module.txt  paleo.c  paleo.h  point.c  spiral.c  spiral.h  spiral_test.c  spiral_test.h  test_macros.h  thresh.h
swig/: .gitignore  Makefile.am  bindings.i  libsr.i  libsr.py  libsrbindings.i
tests/: Makefile.am  README.md  run.rb
tests/common/: Makefile.am  geom.c  mock_point.c  mock_point.h  mock_stroke.c  mock_stroke.h  stroke.c
tests/dollarp/: Makefile.am  dollarp.c
tests/dollarp/data/: circle.stroke.srz  rect1.stroke.srz  rect2.stroke.srz  rect3.stroke.srz  rect4.stroke.srz
tests/paleo/: Makefile.am  paleo.c  recs.c  shapes.c
tools/: collection.py  collection.ui  collector.py  qt_util.py
