#AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libpaleo.a
libpaleo_a_SOURCES = \
	thresh.h \
	paleo.h paleo.c \
	line.c line.h \
	line_test.c line_test.h \
	circle.c circle.h \
	ellipse.c ellipse.h \
	ellipse_test.c ellipse_test.h \
	arc.c arc.h \
	arc_test.c arc_test.h \
	curve.c curve.h \
	curve_test.c curve_test.h \
	spiral.c spiral.h \
	spiral_test.c spiral_test.h \
	helix.h helix.c \
	helix_test.c helix_test.h \
	composite.c composite.h
